# fee-management-system-With-Vibe-Coding-

./: .env.example  .gitignore  .mcp-sqlite.json  README.md  for building exe.txt  pyproject.toml  requirements.txt  run.py  to-do list.docx  ~$-do list.docx  ~WRL0003.tmp
.cursor/: mcp.json
Deployment/: README.md  requirements.txt
app/: main.py
backend/: __init__.py
frontend/: __init__.py  app_restart.py  main.py  single_instance.py
scripts/: backup_now.py  bench_pagination.py  bench_search_tab.py  bench_search_ui.py  build_ace_school_management.ps1  build_deployment_database.py  build_exe.ps1  init_db.py  make_app_icon.py  remove_test_students.py  seed_data.py  ui_responsive_smoke.py
tests/: academic_year_helpers.py  conftest.py  db_cleanup.py  run_extended_fee_analysis.py  run_rollover_analysis.py  test_academic_year_rollover_pending.py  test_academic_years.py  test_auth.py  test_backup_restore.py  test_class_fees_per_year.py  test_client_faculty_seed.py  test_core.py  test_dashboard_expenses_chart.py  test_delete_member.py  test_expense_donut_colors.py  test_expenses.py  test_fee_due_display.py  test_ledger_entry_permissions.py  test_misc_expenses.py  test_misc_income.py  test_month_label_format.py  test_old_student_import.py  test_payment_history_export.py  test_payment_split_backfill.py  test_payment_undo.py  test_pending_fees_collection.py  test_reports.py  test_rollover_analysis_scenarios.py  test_salary_history_export.py  test_salary_undo.py  test_student_cleanup.py  test_student_list_export.py  test_student_roll_number.py  test_village_fees_per_year.py
(+134 files in other folders)
