[project]
name = "fee-management"
version = "0.1.0"
description = "Offline school fee management desktop app"
requires-python = ">=3.12"
dependencies = [
  "pyside6",
  "sqlalchemy",
  "alembic",
  "pandas",
  "openpyxl",
  "xlsxwriter",
  "reportlab",
  "pytest",
  "pyinstaller",
  "bcrypt",
]

[tool.pytest.ini_options]
pythonpath = ["."]
# Never run tests against data/fee_management.db — see tests/conftest.py
addopts = ["-q"]
